Upgrade libs and fix java versions