@@ -40,9 +40,9 @@ import es.rickyepoderi.wbxml.document.WbXmlAttribute;
 import es.rickyepoderi.wbxml.document.WbXmlElement;
 import es.rickyepoderi.wbxml.document.WbXmlEncoder;
 import es.rickyepoderi.wbxml.document.WbXmlParser;
+
+import java.util.Base64;
 import java.io.IOException;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * <p>OTA definition has a property which is an icon (binary image). In
@@ -71,8 +71,7 @@ public class OtaBase64Opaque implements OpaqueAttributePlugin {
             WbXmlAttribute name = element.getAttribute("NAME");
             if (name != null && name.getValue().equals("ICON")) {
                 isIcon = true;
-                BASE64Decoder dec = new BASE64Decoder();
-                encoder.writeOpaque(dec.decodeBuffer(value));
+                encoder.writeOpaque(Base64.getDecoder().decode(value));
             }
         }
         if (!isIcon) {
@@ -92,9 +91,7 @@ public class OtaBase64Opaque implements OpaqueAttributePlugin {
      */
     @Override
     public String parse(WbXmlParser parser, byte[] data) throws IOException {
-        // get the data and show it as Base64
-        BASE64Encoder enc = new BASE64Encoder();
-        return enc.encode(data).replaceAll(System.getProperty("line.separator"), "");
+        return Base64.getEncoder().encodeToString(data).replaceAll(System.getProperty("line.separator"), "");
     }
     
 }
